--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,54 @@
 version: '3.3'
 services:
-  db:
+  auth-db:
     image: mysql:latest
     restart: always
     environment:
-      MYSQL_DATABASE: 'app-db'
+      MYSQL_DATABASE: 'auth-db'
       # So you don't have to use root, but you can if you like
       MYSQL_USER: 'user'
       # You can use whatever password you like
-      MYSQL_PASSWORD: 'Personal@99490011'
+      MYSQL_PASSWORD: 'Personal@123456'
       # Password for root access
-      MYSQL_ROOT_PASSWORD: '99490011'
+      MYSQL_ROOT_USER: 'root'
+      MYSQL_ROOT_PASSWORD: '123456'
     ports:
       # <Port exposed> : < MySQL Port running inside container>
-      - '3306:3306'
+      - '3307:3306'
     expose:
       # Opens port 3306 on the container
       - '3306'
       # Where our data will be persisted
     volumes:
-      - my-db:/var/lib/mysql
+      - auth-mysql-db:/var/lib/mysql
+
+  auth-mongo:
+    image: mongo:latest
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: 'root'
+      MONGO_INITDB_ROOT_PASSWORD: '123456'
+    ports:
+      - "27018:27017"
+    volumes:
+      - auth-mongo-db:/data/db
+
+  auth-mongo-express:
+    image: mongo-express:latest
+    ports:
+      - 8080:8080
+    environment:
+      ME_CONFIG_BASICAUTH_USERNAME: 'user'
+      ME_CONFIG_BASICAUTH_PASSWORD: 'Personal@123456'
+      ME_CONFIG_MONGODB_PORT: 27017
+      ME_CONFIG_MONGODB_SERVER: 'mongo'
+      ME_CONFIG_MONGODB_ADMINUSERNAME: 'root'
+      ME_CONFIG_MONGODB_ADMINPASSWORD: '123456'
+    depends_on:
+      - auth-mongo
+    links:
+      - auth-mongo
+
 # Names our volume
 volumes:
-  my-db:
+  auth-mysql-db:
+  auth-mongo-db:
