--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,51 +4,39 @@ services:
     image: mysql:latest
     restart: always
     environment:
-      MYSQL_DATABASE: 'auth-db'
-      # So you don't have to use root, but you can if you like
-      MYSQL_USER: 'user'
-      # You can use whatever password you like
-      MYSQL_PASSWORD: 'Personal@123456'
-      # Password for root access
-      MYSQL_ROOT_USER: 'root'
-      MYSQL_ROOT_PASSWORD: '123456'
+      MYSQL_DATABASE: auth-db
+      MYSQL_USER: user
+      MYSQL_PASSWORD: Personal@123456
+      MYSQL_ROOT_USER: root
+      MYSQL_ROOT_PASSWORD: 123456
     ports:
-      # <Port exposed> : < MySQL Port running inside container>
-      - '3307:3306'
-    expose:
-      # Opens port 3306 on the container
-      - '3306'
-      # Where our data will be persisted
+      - 3307:3306
     volumes:
       - auth-mysql-db:/var/lib/mysql
 
-  auth-mongo:
-    image: mongo:latest
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.10.2
     environment:
-      MONGO_INITDB_ROOT_USERNAME: 'root'
-      MONGO_INITDB_ROOT_PASSWORD: '123456'
+      - discovery.type=single-node
     ports:
-      - "27018:27017"
+      - "9200:9200"
+      - "9300:9300"
+
+  logstash:
+    image: docker.elastic.co/logstash/logstash:7.10.2
     volumes:
-      - auth-mongo-db:/data/db
-
-  auth-mongo-express:
-    image: mongo-express:latest
-    ports:
-      - 8080:8080
-    environment:
-      ME_CONFIG_BASICAUTH_USERNAME: 'user'
-      ME_CONFIG_BASICAUTH_PASSWORD: 'Personal@123456'
-      ME_CONFIG_MONGODB_PORT: 27017
-      ME_CONFIG_MONGODB_SERVER: 'mongo'
-      ME_CONFIG_MONGODB_ADMINUSERNAME: 'root'
-      ME_CONFIG_MONGODB_ADMINPASSWORD: '123456'
+      - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
     depends_on:
-      - auth-mongo
-    links:
-      - auth-mongo
+      - elasticsearch
+    ports:
+      - "5000:5000"
 
-# Names our volume
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.10.2
+    depends_on:
+      - elasticsearch
+    ports:
+      - "5601:5601"
+
 volumes:
   auth-mysql-db:
-  auth-mongo-db:
