--- a/package.json
+++ b/package.json
@@ -28,20 +28,21 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
-    "@nestjs/mongoose": "^9.2.1",
+    "@nestjs/jwt": "^10.0.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
     "@nestjs/typeorm": "^9.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "mongoose": "^6.8.3",
     "mysql2": "^3.0.1",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.11"
+    "typeorm": "^0.3.11",
+    "winston": "^3.8.2",
+    "winston-logstash": "^1.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
